Changes in Version 0.2.3 (2021-xx-xx)
=====================================
- Installs numpy before build on newer versions of pip (thanks Michael Hirsch)
irbempy
 - Update IRBEMlib to git commit a4759c0 (2021-06-30)
 - This update fixes an uninitialized GSM to SM transform that would return NaN
 - Fix bug in multiprocessed get_lstar when explicitly passing omni values
plot
 - Deprecate colourmaps; they were in matplotlib 1.5.
tests
 - Add spacepy_testing module to provide helper functions for testing.
 - Add assertWarns and assertDoesntWarn context managers.
time
 - Fix warning for out-of-date leapseconds.
 - Apply post-1972 leapsecond rules to pre-1972.
toolbox
 - Fix bootHisto passing of kwargs to histogram and bar.
pybats
 - Fix bug in reading RAM pressure files (affected electrons and total)
pycdf
 - Add support for Sparse Records variables.
 - Fix changing compression when creating variable from existing var/data.

Changes in Version 0.2.2 (2020-12-29)
=====================================
- Document end of support for Python 2
- Quaternion math functions moved to coordinates module
- Remove message on first import.
- Fixed setup.py not finding f2py on some OSX installs
coordinates
 - Include upstream fix for SPH->RLL coordinate transform
datamodel
 - Fix in SpaceData.toXXX() methods which would fail in some cases, now work as intended
 - Documentation update and default units change in createISTPattrs
datamanager
 - New function "rebin", rebin an axis of an array by contents of another
irbempy
 - Update IRBEMlib to rev620
 - Rev620 adds IGRF13 coefficients
 - Add conversion so all systems supported by coordinates can be passed
   to IRBEMlib routines
 - Fix compilation on Raspberry Pi
plot
 - utils.EventClicker support for non-line plots (e.g. pcolor)
 - New method for adding arrows to lines in utils
 - spectrogram.spectrogram class renamed to Spectrogram to avoid collision
   with its module.
pycdf